# factory-regulation-monitoring

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  regulasyon-takibi-flowchart.drawio
data/: items.db
logs/: mail_events.jsonl  mail_log_dashboard.html
scripts/: diagnose_item.py  run_daily.sh
src/app/: __init__.py  config.py  logging_config.py  main.py  streamlit_debug.py
src/core/: __init__.py  http.py  models.py  state.py
src/daemon/: hourly_runner.py
src/gazette/: __init__.py  client.py  parser.py
src/llm/: ollama_client.py
src/notify/: emailer.py  mail_log.py  templates.py
src/pipeline/: run_daily.py
src/policies/: __init__.py  base.py  ik.py  isg.py  lojistik.py  muhasebe.py  utils.py
src/tools/: diagnose_item.py
tests/: test_isg_policy.py
